PROD-9647 - Fix description with controls spacing

--- a/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
@@ -214,7 +214,7 @@
             .bb-admin-settings-form__field-description {
                 margin: 0;
 
-                &--has-controls  .bb-admin-settings-form__inline-select {
+                &--has-controls .bb-admin-settings-form__inline-select {
                     margin-left: 8px;
                 }
             }
@@ -227,6 +227,10 @@
         font-weight: 400;
         line-height: 1.5;
         margin: 20px 0 0 0;
+
+        &--has-controls {
+            margin-top: 0;
+        }
     }
 
     &-head-description {
